--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -6,10 +6,10 @@
   },
   "scripts": {
     "db:seed": "tsx scripts/seed.ts",
-    "db:migrate": "tsx scripts/migrate.ts",
+    "db:migrate": "drizzle-kit migrate",
     "db:pull": "drizzle-kit pull",
     "db:studio": "drizzle-kit studio",
-    "generate": "drizzle-kit generate"
+    "db:generate": "drizzle-kit generate"
   },
   "dependencies": {
     "dotenv": "^16.5.0",
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "drizzle-kit": "0.31.1",
+    "drizzle-seed": "^0.3.1",
     "tsx": "4.19.4",
     "typescript": "5.8.3"
   }
