--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -9,14 +9,15 @@
     "db:migrate": "drizzle-kit migrate",
     "db:pull": "drizzle-kit pull",
     "db:studio": "drizzle-kit studio",
-    "db:generate": "drizzle-kit generate"
+    "db:generate": "drizzle-kit generate",
+    "auth:generate": "pnpm dlx @better-auth/cli@latest generate --config ../auth/src/index.ts --output src/schema-auth.ts"
   },
   "dependencies": {
-    "dotenv": "^16.5.0",
     "drizzle-orm": "0.44.1",
     "postgres": "3.4.7"
   },
   "devDependencies": {
+    "dotenv": "^16.5.0",
     "drizzle-kit": "0.31.1",
     "drizzle-seed": "^0.3.1",
     "tsx": "4.19.4",
