--- a/package.json
+++ b/package.json
@@ -2,9 +2,13 @@
   "name": "@851-labs/pulse",
   "version": "0.0.0",
   "scripts": {
-    "dev": "turbo dev"
+    "dev": "turbo dev",
+    "format": "prettier --write \"**/*.{ts,tsx,md,json}\""
   },
   "devDependencies": {
+    "prettier": "^3.5.3",
+    "prettier-plugin-packagejson": "^2.5.15",
+    "prettier-plugin-tailwindcss": "^0.6.12",
     "turbo": "^2.5.4"
   },
   "packageManager": "pnpm@10.11.1+sha512.e519b9f7639869dc8d5c3c5dfef73b3f091094b0a006d7317353c72b124e80e1afd429732e28705ad6bfa1ee879c1fce46c128ccebd3192101f43dd67c667912"
