--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -6,12 +6,12 @@
     ".": "./src/index.ts"
   },
   "scripts": {
-    "db:seed": "tsx scripts/seed.ts",
+    "auth:generate": "pnpm dlx @better-auth/cli@latest generate --config ../auth/src/index.ts --output src/schema-auth.gen.ts",
+    "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:pull": "drizzle-kit pull",
-    "db:studio": "drizzle-kit studio",
-    "db:generate": "drizzle-kit generate",
-    "auth:generate": "pnpm dlx @better-auth/cli@latest generate --config ../auth/src/index.ts --output src/schema-auth.gen.ts"
+    "db:seed": "tsx scripts/seed.ts",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "drizzle-orm": "0.44.1",
