--- a/turbo.json
+++ b/turbo.json
@@ -21,6 +21,28 @@
         ".cache/tsbuildinfo.json",
         "dist/**"
       ]
+    },
+    "auth:generate": {
+      "cache": false
+    },
+    "zero:generate": {
+      "cache": false
+    },
+    "db:generate": {
+      "cache": false
+    },
+    "db:migrate": {
+      "cache": false
+    },
+    "db:pull": {
+      "cache": false
+    },
+    "db:seed": {
+      "cache": false
+    },
+    "db:studio": {
+      "cache": false,
+      "persistent": true
     }
   },
   "globalEnv": [],
