--- a/apps/spa/package.json
+++ b/apps/spa/package.json
@@ -5,13 +5,11 @@
   "main": "index.js",
   "scripts": {
     "build": "vinxi build",
-    "dev": "vinxi dev",
+    "dev": "vinxi dev --port 3010",
     "start": "vinxi start"
   },
   "dependencies": {
     "@rocicorp/zero": "^0.20.2025052100",
-    "@supabase/ssr": "^0.5.2",
-    "@supabase/supabase-js": "^2.48.1",
     "@tanstack/react-router": "^1.120.15",
     "@tanstack/react-router-devtools": "^1.120.15",
     "@tanstack/react-start": "^1.120.15",
