--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -11,7 +11,8 @@
     "db:migrate": "drizzle-kit migrate",
     "db:pull": "drizzle-kit pull",
     "db:seed": "tsx scripts/seed.ts",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "types:check": "tsc --noEmit"
   },
   "dependencies": {
     "drizzle-orm": "0.44.1",
