--- a/turbo.json
+++ b/turbo.json
@@ -43,6 +43,10 @@
     "db:studio": {
       "cache": false,
       "persistent": true
+    },
+    "types:check": {
+      "dependsOn": ["^topo"],
+      "outputs": [".cache/tsbuildinfo.json"]
     }
   },
   "globalEnv": [],
