--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -4,14 +4,15 @@
   "exports": {
     ".": "./src/index.ts"
   },
-  "scripts": {},
+  "scripts": {
+    "types:check": "tsc --noEmit"
+  },
   "dependencies": {
     "@851-labs/database": "workspace:*",
-    "better-auth": "^1.2.8",
-    "types:check": "tsc --noEmit"
+    "better-auth": "^1.2.8"
   },
   "devDependencies": {
     "dotenv": "^16.5.0",
-    "typescript": "5.8.3"
+    "typescript": "^5.8.3"
   }
 }
