--- a/apps/spa/package.json
+++ b/apps/spa/package.json
@@ -17,6 +17,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "redaxios": "^0.5.1",
+    "tailwind-merge": "^3.3.0",
     "vinxi": "0.5.3"
   },
   "devDependencies": {
