--- a/apps/spa/package.json
+++ b/apps/spa/package.json
@@ -10,6 +10,7 @@
     "types:check": "tsc --noEmit"
   },
   "dependencies": {
+    "@base-ui-components/react": "1.0.0-beta.0",
     "@rocicorp/zero": "^0.20.2025052100",
     "@tanstack/react-router": "^1.120.15",
     "@tanstack/react-router-devtools": "^1.120.15",
