--- a/apps/spa/package.json
+++ b/apps/spa/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-router": "^1.120.15",
     "@tanstack/react-router-devtools": "^1.120.15",
     "@tanstack/react-start": "^1.120.15",
+    "lucide-react": "^0.513.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "redaxios": "^0.5.1",
