--- a/apps/spa/package.json
+++ b/apps/spa/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "scripts": {
     "build": "vinxi build",
+    "deploy": "wrangler deploy",
     "dev": "vinxi dev --port 3010",
     "start": "vinxi start",
-    "types:check": "tsc --noEmit"
+    "types:check": "tsc --noEmit",
+    "types:generate": "wrangler types --env-interface CloudflareBindings"
   },
   "dependencies": {
     "@base-ui-components/react": "1.0.0-beta.0",
@@ -19,6 +21,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "redaxios": "^0.5.1",
+    "shiki": "^3.6.0",
     "tailwind-merge": "^3.3.0",
     "vinxi": "0.5.3"
   },
@@ -26,9 +29,12 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "autoprefixer": "^10.4.20",
+    "nitro-cloudflare-dev": "^0.2.2",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
-    "vite-tsconfig-paths": "^5.1.4"
+    "unenv": "^1.10.0",
+    "vite-tsconfig-paths": "^5.1.4",
+    "wrangler": "^4.19.1"
   }
 }
