--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "db:studio": "turbo db:studio",
     "dev": "turbo dev",
     "format": "prettier --write \"**/*.{ts,tsx,md,json}\"",
-    "postinstall": "pnpm lint:ws && pnpm auth:generate && pnpm db:generate && pnpm zero:generate && pnpm format",
+    "postinstall": "pnpm lint:ws && pnpm types:generate && pnpm auth:generate && pnpm db:generate && pnpm zero:generate && pnpm format",
     "lint:ws": "sherif",
     "types:check": "turbo types:check",
+    "types:generate": "turbo types:generate",
     "zero:generate": "turbo zero:generate"
   },
   "devDependencies": {
