--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
     "types:generate": "wrangler types --env-interface CloudflareBindings"
   },
   "dependencies": {
+    "@851-labs/zero": "workspace:*",
     "@base-ui-components/react": "1.0.0-beta.0",
     "@rocicorp/zero": "^0.20.2025052100",
     "@tanstack/react-router": "^1.120.15",
