--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,12 +27,12 @@
     "vinxi": "0.5.3"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.8",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "autoprefixer": "^10.4.20",
     "nitro-cloudflare-dev": "^0.2.2",
     "postcss": "^8.5.1",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.8",
     "typescript": "^5.8.3",
     "unenv": "^1.10.0",
     "vite-tsconfig-paths": "^5.1.4",
